--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-*{
-  box-sizing: border-box !important;
-  margin: 0;
-  padding:0;
-}
-
 button,input{
   background: none;
   border: none;
@@ -20,9 +14,29 @@ button,input{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height:100vh;
+  /* min-height:100vh; */
   overflow: hidden;
   height:100vh;
 }
 
+.overlay{
+  position: absolute;
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
 
+}
+.spinner{
+  backdrop-filter: opacity(0.7);
+  background-color:rgba(214, 138, 39, 0.445);
+  width: 100px;
+  height: 100px;
+  color: rgb(228, 118, 15) !important;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+}
