--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,17 @@ i {
     transform: rotateX(360deg);
   }
 }
+
+.splash{
+
+  max-width: 100vw ;
+  max-height: 100vh;
+  
+}
+
+.splashscreen{
+  display: flex;
+  height:100vh;
+  align-items: center;
+  background-color:#FBF3F0 ;
+}
