--- a/src/components/Drawer/Drawer.css
+++ b/src/components/Drawer/Drawer.css
@@ -1,5 +1,5 @@
 .total{
-  height:10%;
+  height:5%;
 }
 
 .Drawer-Container {
@@ -13,7 +13,7 @@
 }
 
 .Drawer-Container-isOpen {
-  transform: translateY(-70%);
+  transform: translateY(-75.0%);
   /* backdrop-filter: blur(2px); */
   background-color: rgba(255, 166, 0, 0.863);
   
@@ -32,4 +32,11 @@
   margin:0 auto;
   height:100%;
   width:100%;
+}
+
+.total-head{
+  color:black;
+  font-family: 'Roboto', sans-serif;
+  
+
 }
